# quizcraft

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  referat.md  run-backend.ps1  run-frontend.ps1
.agent/: PLANS.md
.github/workflows/: ci.yml
backend/: __init__.py  requirements.txt
backend/app/: __init__.py  main.py
backend/tests/: docx_samples.py  pdf_samples.py  test_api_advanced_exports.py  test_api_export_json.py  test_api_generation_rag.py  test_api_health.py  test_api_lm_studio.py  test_api_ollama.py  test_api_quiz_read.py  test_api_quiz_update.py  test_api_schemas.py  test_api_upload_and_generate.py  test_bootstrap.py  test_chunking.py  test_config.py  test_context_assembler.py  test_csv_exporter.py  test_document_ingestion_service.py  test_docx_exporter.py  test_domain_enums.py  test_domain_models.py  test_export_registry.py  test_external_api_provider.py  test_file_validation.py  test_generation_orchestrator.py  test_generation_profile_resolution.py  (+30 more)
design-concepts-v2/: 01-homepage.html  02-quiz-editor.html  03-status-page.html
docs/: manual-local-validation.md
frontend/: app.js  base.css  config.js  copy.js  download.js  feedback.css  forms.css  gen-timing.js  generation-flow.js  generation-settings.js  index.html  keyboard.js  layout.css  modal.js  progress.js  quiz-editor.js  quiz-history.js  quiz-renderer.js  quiz.css  responsive.css  stage-flow.js  styles.css  theme.js  toast.js  tokens.css  validation-errors.js
staged-flow-prototype/: index.html
tests/: test_frontend_shell.py  test_repository_layout.py
(+76 files in other folders)
