[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "quizcraft"
version = "0.1.0"
description = "Local single-user quiz generation service backed by LM Studio."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.32,<1",
    "pypdf>=5,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "httpx>=0.27,<1",
    "ruff>=0.6,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [
    ".venv",
    "__pycache__",
    ".quizcraft",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
]
ignore = [
    "E501",
]
